fixed_categories (#26)
* fixed pull request_to good visability

* fixed comment